test/files/neg/t9382.scala

trait T {
  def f = (List(1,2,3), List(4,5,6)).x
  def g = (List(1,2,3), List(4,5,6), List(7,8,9)).x
  def huh = (1,2).x
}
